# cosmos

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  README.MD  Setup.py  premake5.lua
Docs/img/: projects_comparation.psd
Editor/: CMakeLists.txt  premake5.lua
Editor/Source/: Main.cpp
Editor/Source/Core/: Editor.cpp  Editor.h
Editor/Source/UI/: Demo.cpp  Demo.h
Engine/: CMakeLists.txt  premake5.lua
Engine/Assets/Texture/: devtextures.psd
Engine/Source/: Engine.h
Engine/Source/Core/: Application.cpp  Application.h  Core.h  Defines.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Engine/Source/Scene/: Components.cpp  Components.h  Entity.h  World.cpp  World.h
Engine/Source/UI/: GUI.cpp  GUI.h  Icons.h  Images.h  Widget.cpp  Widget.h
Engine/Source/Util/: Clock.h  Container.h  Datafile.h  ID.h  Library.h  Logger.cpp  Logger.h
Projects/Agenda/: CMakelists.txt
Projects/Agenda/Source/: Application.cpp  Application.h  MainWidget.cpp  MainWidget.h  Util.cpp  Util.h  main.cpp
Projects/Editor/: CMakeLists.txt
Projects/Editor/Source/: main.cpp
Projects/Editor/Source/Core/: Editor.cpp  Editor.h
Projects/Editor/Source/UI/: Demo.cpp  Demo.h  Dockspace.cpp  Dockspace.h  EntityView.cpp  EntityView.h  Grid.cpp  Grid.h  Viewport.cpp  Viewport.h
Projects/FXClient/: CMakeLists.txt
Projects/FXClient/Android/: .gitignore  settings.gradle
Projects/FXClient/Android/app/: build.gradle
Projects/FXClient/Android/app/src/androidTest/java/com/FXClient/: ExampleInstrumentedTest.java
Projects/FXClient/Android/app/src/main/cpp/: CMakeLists.txt
Projects/FXClient/Android/app/src/main/java/com/FXClient/: Main.java
Projects/FXClient/Android/app/src/main/res/values/: strings.xml
Projects/FXClient/Source/: CoreWidget.cpp  main.cpp
Projects/FXClient/app/src/main/java/com/FXClient/: BluetoothManager.java  MainActivity.java
Projects/FxClient/: CMakeLists.txt  gradle.properties
Projects/FxClient/Assets/: images_dev.psd
Projects/FxClient/Source/: Application.cpp  Application.h  CoreWidget.cpp  CoreWidget.h  Effect.h  main.cpp
Projects/FxClient/app/src/main/: AndroidManifest.xml
Projects/FxClient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Projects/FxClient/app/src/main/cpp/FXClient/: Application.cpp  Application.h  Bluetooth.cpp  Bluetooth.h  CoreWidget.cpp  CoreWidget.h  Effect.h
Projects/FxClient/app/src/main/java/com/FXClient/: Main.java
Projects/FxClient/app/src/main/java/org/libsdl/app/: HIDDevice.java  HIDDeviceBLESteamController.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLSurface.java
Projects/FxClient/app/src/test/java/com/FXClient/: ExampleUnitTest.java
Projects/FxClient/gradle/wrapper/: gradle-wrapper.properties
Projects/ResCalc/: CMakeLists.txt
Projects/ResCalc/Android/app/: build.gradle
Projects/ResCalc/Android/app/src/main/: AndroidManifest.xml
Projects/ResCalc/Android/app/src/main/cpp/: CMakeLists.txt
Projects/ResCalc/Android/app/src/main/java/com/ResCalc/: Main.java
Projects/ResCalc/Android/app/src/main/java/org/libsdl/app/: HIDDeviceUSB.java
Projects/ResCalc/Source/: Application.cpp  Application.h  ResCalcWidget.cpp  ResCalcWidget.h  main.cpp
Projects/ResCalc/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Projects/ResCalc/app/src/main/cpp/ResCalc/: Application.cpp  ResCalcWidget.cpp
Projects/ResCalc/app/src/main/java/com/ResCalc/: Main.java
Projects/ResCalc/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLControllerManager.java  SDLDummyEdit.java
Projects/ResCalc/app/src/test/java/com/ResCalc/: ExampleUnitTest.java
Projects/ResCalc_Android/: settings.gradle
Projects/ResCalc_Android/app/src/androidTest/java/com/ResCalc/: ExampleInstrumentedTest.java
Projects/ResCalc_Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Projects/ResCalc_Android/app/src/main/cpp/ResCalc/: ResCalcWidget.cpp  ResCalcWidget.h
Projects/ResCalc_Android/app/src/main/java/org/libsdl/app/: SDLInputConnection.java
Projects/ResCalc_Android/gradle/: libs.versions.toml
Projects/ResCalc_Desktop/: CMakeLists.txt
Projects/ResCalc_Desktop/Source/: Application.cpp  ResCalcWidget.cpp  main.cpp
Tools/img2bin/: _img2bin.py
Tools/img2bin/outputs/: incorelogo.c
